@@ -24,6 +24,7 @@ TODO inlining : substitute class+function type parameters in order to have fully
 	added __FSCommand2__ support
 	optimized haxe.Unserializer (use faster buffer access)
 	use "Dynamic" instead of Dynamic->Void for flash9 IEventDispatcher
+	always use full classes paths for genAS3
 
 2008-07-28: 2.0
 	fixed current package bug in inherited constructor type
